complete basic redis orderbook